# www-jprugel-dev

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  cargo.toml
api/: Cargo.toml  Dockerfile
api/src/: lib.rs  main.rs  pools.rs
blogs/: example.md
client/: Cargo.toml  index.html  style.css
client/src/: lib.rs  main.rs  utility.rs
client/src/components/: article.rs  feed.rs  login.rs  mod.rs  navbar.rs  search.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  models.rs  schema.rs  utility.rs
src/: main.rs
styles/: style.css
templates/: base.html.tera
