[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["ssr", "hydrate", "suspense"] }
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent", "console", "Storage"]
version = "0.3.59"
