[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
sycamore = { version = "0.9.0-beta.2", features = ["ssr", "hydrate", "suspense", "futures"] }
wasm-bindgen = "0.2.82"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
gloo-net = { version = "0.5.0", features = ["json"] }
gloo-console = "0.3.0"
tokio = { version = "1.37.0", features = ["rt"] }
serde = "1.0.201"
serde_json = "1.0"
markdown = "1.0.0-alpha.17"

[dependencies.web-sys]
features = ["HtmlInputElement", "InputEvent", "console", "Storage", "MediaQueryList"]
version = "0.3.59"
