[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
rocket = { version="0.5.0-rc.2", features=["json"] }
sycamore = { version="0.9.0-beta.2", features=["ssr"] }
diesel = { version = "2.1.0", features = ["postgres"] }
markdown = "1.0.0-alpha.17"
tokio = { version = "1.37.0", features = ["rt"] }

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_postgres"]
